--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <img src="Src/Assets/images/Ejc.png" alt="Logo EJC">
         </nav>
         <h1>Cárdapio Mini-Bar</h1>
-        <p>Paróquia Nossa Senhora de Fárima <br>Jd. Tranquilidade</p>
+        <p>Paróquia Nossa Senhora de Fátima <br>Jd. Tranquilidade</p>
     </header>
     <main>
         <section class="Bebidas">
