--- a/index.html
+++ b/index.html
@@ -11,11 +11,8 @@
 </head>
 <body>
     <header>
-        <nav>
-            <img src="Src/Assets/images/Ejc.png" alt="Logo EJC">
-        </nav>
-        <h1>Cárdapio Mini-Bar</h1>
-        <p>Paróquia Nossa Senhora de Fátima <br>Jd. Tranquilidade</p>
+        <img src="Src/Assets/images/IMG-20250916-WA0009.jpg" alt="" class="img-desktop"> 
+        <img src="Src/Assets/images/IMG-20250916-WA0011.jpg" alt=""class="img-mobile">
     </header>
     <main>
         <section class="Bebidas">
@@ -31,7 +28,7 @@
             <ul>
                 <li>Chiclete Trident  <span>10 R$</span></li>
                 <li>Bala de Goma  <span>10 R$</span> </li>
-                <li>Chocolate Diamante Negro  <span>10 R$</span></li>
+                <li>Choc. Diamante Negro  <span>10 R$</span></li>
                 <li>Bala Mentos  <span>10 R$</span> </li>
                 <li>Bombom Ouro Branco  <span>10 R$</span> </li>
                 <li>Bombom Sonho de Valsa  <span>10 R$</span> </li>
