--- a/index.html
+++ b/index.html
@@ -22,30 +22,29 @@
         <section class="Bebidas reveal">
             <h2>Bebidas</h2>
             <ul>
-                <li>Refrigerante  <span>R$ 7,00</span> </li>
-                <li>Suco Natural  <span>R$...</span> </li>
+                <li>Refrigerante (Lata)  <span>R$ 7,00</span> </li>
                 <li>Água Mineral  <span>R$ 4,00</span> </li>
             </ul>
         </section>
         <section class="Doces reveal">
             <h2>Doces</h2>
             <ul>
-                <li>Chiclete Trident  <span>R$ 2,50</span></li>
-                <li>Bala de Goma  <span>R$...</span> </li>
+                <li>Chiclete Trident  <span>R$ 3,50</span></li>
+                <li>Bala de Goma  <span>R$ 2,50</span> </li>
                 <li>Chocolate <br> Diamante Negro  <span>R$ 4,00</span></li>
-                <li>Bala Mentos  <span>R$ 4,00</span> </li>
+                <li>Bala Mentos  <span>R$ 3,00</span> </li>
                 <li>Bombom <br> Ouro Branco  <span>R$ 2,00</span> </li>
                 <li>Bombom Sonho <br> de Valsa  <span>R$ 2,50</span> </li>
-                <li>Bala Halls  <span> R$ 2,50</span> </li>
+                <li>Bala Halls  <span> R$ 3,00</span> </li>
             </ul>
         </section>
         <section class="Artigos reveal">
             <h2>Artigos Religiosos</h2>
             <ul>
-                <li>Terço de Dedo <span>R$...</span></li>
-                <li>Terço Colorido <span>R$...</span></li>
-                <li>Chaveiro do EJC <span>R$...</span></li>
-                <li>Chaveiro <br>de Anjinho <span>R$...</span></li>
+                <li>Terço de Dedo Pequeno<span>R$ 5,00</span></li>
+                <li>Terço de Dedo Médio<span>R$ 6,50</span></li>
+                <li>Terço Colorido <span>R$ 15,00</span></li>
+                <li>Chaveiro do EJC <span>R$ 5,00</span></li>
             </ul>
         </section>
         <article class="musica reveal">
@@ -58,7 +57,7 @@
         </article>
     </main>
     <footer>
-        <p><span><strong>ATENÇÃO!</strong></span> Os itens adquiridos para pagamento posterior serão cobrados ao final do encontro ou na semana seguinte.</p>
+        <p><span><strong>ATENÇÃO!</strong></span> Os itens adquiridos para pagamento posterior deverão ser Pagos ao final do encontro ou na semana seguinte.</p>
     </footer>
     <script>
         const items = document.querySelectorAll('.reveal');
