--- a/index.html
+++ b/index.html
@@ -22,29 +22,29 @@
         <section class="Bebidas reveal">
             <h2>Bebidas</h2>
             <ul>
-                <li>Refrigerante (Lata)  <span>R$ 7,00</span> </li>
-                <li>Água Mineral  <span>R$ 4,00</span> </li>
+                <li>Refrigerante (Lata)  <span class="Preço">R$ 7,00</span> </li>
+                <li>Água Mineral  <span class="Preço">R$ 4,00</span> </li>
             </ul>
         </section>
         <section class="Doces reveal">
             <h2>Doces</h2>
             <ul>
-                <li>Chiclete Trident  <span>R$ 3,50</span></li>
-                <li>Bala de Goma  <span>R$ 2,50</span> </li>
-                <li>Chocolate <br> Diamante Negro  <span>R$ 4,00</span></li>
-                <li>Bala Mentos  <span>R$ 3,00</span> </li>
-                <li>Bombom <br> Ouro Branco  <span>R$ 2,00</span> </li>
-                <li>Bombom Sonho <br> de Valsa  <span>R$ 2,50</span> </li>
-                <li>Bala Halls  <span> R$ 3,00</span> </li>
+                <li>Chiclete Trident  <span class="Preço">R$ 3,50</span></li>
+                <li>Bala de Goma  <span class="Preço">R$ 2,50</span> </li>
+                <li>Chocolate <br> Diamante Negro  <span class="Preço">R$ 4,00</span></li>
+                <li>Bala Mentos  <span class="Preço">R$ 3,00</span> </li>
+                <li>Bombom <br> Ouro Branco  <span class="Preço">R$ 2,00</span> </li>
+                <li>Bombom Sonho <br> de Valsa  <span class="Preço">R$ 2,50</span> </li>
+                <li>Bala Halls  <span> R$ 3,00</span class="Preço"> </li>
             </ul>
         </section>
         <section class="Artigos reveal">
             <h2>Artigos Religiosos</h2>
             <ul>
-                <li>Terço de Dedo Pequeno<span>R$ 5,00</span></li>
-                <li>Terço de Dedo Médio<span>R$ 6,50</span></li>
-                <li>Terço Colorido <span>R$ 15,00</span></li>
-                <li>Chaveiro do EJC <span>R$ 5,00</span></li>
+                <li>Terço de Dedo Pequeno<span>R$ 5,00</span class="Preço"></li>
+                <li>Terço de Dedo Médio<span>R$ 6,50</span class="Preço"></li>
+                <li>Terço Colorido <span>R$ 15,00</span class="Preço"></li>
+                <li>Chaveiro do EJC <span>R$ 5,00</span class="Preço"></li>
             </ul>
         </section>
         <article class="musica reveal">
